# macro-dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml  rxconfig.py
macro_wide/: macro_wide.py
macro_wide/services/: __init__.py  fred_data.py  market_data.py
